= MagLev Change Log

  For more details see: http://bit.ly/d3C6S1

== Unreleased Changes

== Changes for 26024 2011-06-21
* Add Rails 3.1.0rc4 support.
* Fix Trac 922.
* Merge Fix of Trac 921.
* More fixes for Trac 913 . Fix some problems in printf.
* Fix a problem in rebuild of Hash.
* Bugfixes/enhancements in underlying GemStone 3.0 system

== Changes for 26011 2011-06-15
* Added $MaglevInBootstrap flag that is true during primitive install
  (bootstrap) and nil otherwise.  Used for debugging src/kernel code.
* Fix Trac 919, 920. Allow bridge chars in arg to remove_method. Fix
  remove_method, alias, undef to handle trailing suffix chars.
* Fix regressions in Trac 463, 484b.  Fix some deviations in language/def_spec.rb
* Bugfixes in underlying GemStone 3.0 system

== Changes for 25987 2011-06-14
* Update rakefiles to 0.9.2: use of Rake::DSL and fix rdoc task.
* Fixes to C extension implementation so sqlite3 C code will run.
* adjusts topaz printing for STACK and THREAD commands.
* Fix Trac 538, and test case Trac484b .
* Fix Trac 914, 915, 916, 917, 918.
* Bugfixes in underlying GemStone 3.0 system

== Changes for 25955 2011-06-09
* Updated to RubyGems 1.8.5
* Update pre-installed gems: rake => 0.9.2, bundler => 1.0.14
* Fix Trac 913
* More fixes to line numbering in backtraces, and how
    bootstrap code is shown in backtraces.
* Relaxed the 75% of total ram limit for SHMMAX to enable
  customers with 144 GB of ram to use more of their physical memory.

== Changes for 25943 2011-06-07
* Fix Trac 904, 905, 906, 907, 908, 911
* Update underlying GemStone 3.0 system to GS/S 3.0.1

== Changes for 25913 2011-05-27
* Fix Trac 900, 901, 902, 903
* Bugfixes in underlying GemStone 3.0 system
  - fix 41127, 41385, 41452, 41532, 41535, 41544, 41547, 41548, 41549, 41550,
    41551, 41552, 41553, 41555, 41558, 41560, 41561, 41563, 41568, 41582, 41585

== Changes for 25876 2011-05-17
* Add local copy of jquery so WebTools demo can be done w/o network access.