@@ -195,6 +195,7 @@ Trac453.rb
 Trac454.rb
 Trac462.rb
 Trac463.rb
+Trac463a.rb
 Trac464.rb
 Trac465.rb
 # Trac783.rb  # run earlier in the Test::Unit section
